Revert "fix(avatar): fix avatar white spaces"
This reverts commit 04407438b1c01bf7b4466c5fbe52719dcd3b3b6e.

--- a/packages/design/components/Avatar/style/index.less
+++ b/packages/design/components/Avatar/style/index.less
@@ -1,7 +1,6 @@
 .bgm-avatar {
   display: inline-block;
   box-sizing: border-box;
-  vertical-align: middle;
   border-radius: 6px;
   border: 1px solid #ede9e9;
 
